infra-code/terraform/oci/oke-cluster-stack/addons/webpage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webpage
  namespace: webcolor
  labels:
    app: webpage
spec:
  type: ClusterIP
  selector:
    app: webpage
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
