infra-code/terraform/oci/oke-cluster-stack/addons/app-ingress-arbtitech.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - app.arbtitech.com
    secretName: app-arbtitech-tls
  rules:
  - host: app.arbtitech.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: meu-service
            port:
              number: 80
