infra-code/terraform/oci/oke-cluster-stack/addons/ingress-webcolor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webpage-ingress
  namespace: webcolor
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - webcolor.arbtech.com.br
      secretName: webcolor-tls
  rules:
    - host: webcolor.arbtech.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webpage
                port:
                  number: 80
